# HR-PRIME-tz

./: .env_example  README.md  database.backup  docker-compose.yml  main.py  pyproject.toml
exports/: companies.xlsx
src/: config.py  router.py
src/api/: repo.py  service.py
src/api/schemas/: __init__.py  company.py  vacancy.py
src/database/: database_helper.py
src/models/: __init__.py  base.py  company.py  vacancy.py
src/static/: regions.py
src/utils/: parser.py  save_to_excel.py
