[project]
name = "hr-prime-tz"
version = "0.1.0"
description = ""
authors = [
    {name = "redun",email = "redunsasha2017@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.49.0,<0.50.0)",
    "fastapi (>=0.138.0,<0.139.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
